--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: rgb(0, 45, 93);
 }
 
 .display-text {
@@ -16,7 +17,8 @@ img {
     height: 150px;
     width: 150px;
     padding: 10px;
-
+    padding: 10px;
+    margin: 20px;
 }
 
 .container-player {
@@ -30,22 +32,19 @@ img {
     align-items: center;
 }
 
+.container-vs > p {
+    border: 2px solid black;
+    padding: 8px;
+    border-radius: 5px;
+}
+
 p {
     font-size: 25px;
-}
-
-#win-score {
-
-}
-
-#lose-score {
-
 }
 
 .container-bot {
     display: flex;
     justify-content: space-around;
-
 }
 
 h1 {
@@ -56,4 +55,24 @@ h1 {
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     transform: scale(1.1);
+}
+
+.button-restart {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+button {
+    text-transform: uppercase;
+    font-weight: 400;
+    padding: 10px;
+    transition: 0.25s;
+    text-decoration: none;
+    border-radius: 2em;
+}
+
+button:hover {
+    color: black;
+    background-color: #d2c103;
 }
